tightened up div sizing to fix jumpiness

--- a/todo_app/client/src/App.css
+++ b/todo_app/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F5F8FA;
+  background-color: #CED9E0;
 }
 
 .App {
@@ -28,10 +28,11 @@ body {
   order: 1;
   flex-grow: 1;
   counter-reset: spans;
-  height: 90vh;
+  height: 91vh;
   width: 50vw;
   overflow-y: auto;
   overflow-x: hidden;
+  margin-right: 10px;
   /* background-color: #F5F8FA; */
 }
 
@@ -42,7 +43,7 @@ body {
 .matrix {
   text-align: left;
   width: 30vw;
-  height: 90vh;
+  height: 91vh;
   /* padding-top: 46px; */
   order: 2;
   background-color: #F5F8FA;
@@ -53,7 +54,7 @@ body {
   display: grid;
   grid-template-columns: repeat(8 1fr);
   grid-template-rows: repeat(5 1fr);
-  height: 100%;
+  height: 95vh;
   box-sizing: border-box;
 }
 /*
@@ -88,7 +89,7 @@ body {
   /* border: 1px solid pink; */
 }
 .unclassified {
-  grid-area: 2 / 4 / 4 / 6;
+  grid-area: 1 / 4 / 5 / 6;
   /* border: 1px solid black; */
 }
 .droppy-area-container {
@@ -99,13 +100,23 @@ body {
   /* overflow: scroll; */
 }
 .droppy-area{
-  width: 90%;
-  height: 90%;
+  width: 32vw;
+  height: 40vh;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.middle-droppy-area {
+  background-color: red;
+  height: 60vh;
 }
 
 .draggy-thing {
   /* border: 1px solid gray; */
   border-radius: 3px;
+  width: 98%;
   box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.15), 0 0 0 rgba(16, 22, 26, 0), 0 0 0 rgba(16, 22, 26, 0);
 }
 
@@ -154,6 +165,10 @@ body {
   padding: .4em 0 0 2em;
 }
 
+.priority-list li {
+  margin: .8em 0;
+}
+
 .lineNum {
   display: block;
   width: 2em;
@@ -170,6 +185,7 @@ body {
 
 .hashtag-button {
   margin: 2px 5px;
+  padding: 5px 6px 5px 5px;
 }
 
 .tagNum {
